themes/a11y-base.css
/* ... */
.button:hover:active {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

/***********
 * Entries *
 ***********/
.entry {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;

    border-radius: 3px;

    background-color: @theme_entry_bg;
    padding: 4px;
}

.entry:selected {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.entry:focus {
    border-width: 2px;
    border-color: @theme_highlight_color;
}

.entry:insensitive {
    border-color: @theme_insensitive_border;
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

GtkComboBox *:hover {
    color: @theme_insensitive_bg;
}

GtkComboBox .separator {
    color: transparent;
}

.trough {
    background-color: @theme_trough_bg;
    color: @theme_trough_fg;

    border-width: 1px;
    border-style: solid;
    border-color: @theme_trough_fg;
    border-radius: 3px;
}

.trough:insensitive {
    border-color: @theme_trough_insensitive_border;
    background-color: @theme_trough_insensitive_bg;
    color: @theme_trough_insensitive_fg;
}

.trough:insensitive:active {
    background-color: @theme_insensitive_bg;
}

.progressbar {
    background-color: @theme_highlight_color;
    border-width: 1px;
    border-color: @theme_highlight_border;
    border-radius: 3px;
    border-style: solid;
}

GtkComboBox .button {
    padding: 0 4px;
}

.combobox-entry .button {
    background-color: @theme_entry_bg;
    color: @theme_fg_color;
    border-width: 1px;
    border-color: @theme_fg_color;
}

.combobox-entry .button:hover {
    background-color: @theme_fg_color;
}

.combobox-entry .button:active {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.combobox-entry .button:insensitive {
    background-color: @theme_insensitive_bg;
    color: @theme_internal_bg;
    border-color: @theme_insensitive_border;
}

.combobox-entry .entry:first-child {
    border-right-width: 0px;
    border-radius: 2px 0 0 2px;
}

.combobox-entry .entry:last-child {
    border-left-width: 0px;
    border-radius: 0 2px 2px 0;
}

.combobox-entry .button:first-child {
    border-radius: 2px 0 0 2px;
}

.combobox-entry .button:last-child {
    border-radius: 0 2px 2px 0;
}

.spinbutton .button {
    padding: 2px 6px;
    color: @theme_active_color;

    border-width: 1px;
    border-radius: 0;
    background-color: @theme_entry_bg;
    background-clip: border-box;

    border-color: transparent @theme_internal_border;
}

.spinbutton .button:hover {
    background-color: @theme_active_color;
    color: @theme_insensitive_bg;
    border-color: transparent @theme_active_color;
}

.spinbutton .button:insensitive {
    color: @theme_insensitive_color;
    background-color: @theme_insensitive_bg;
    border-color: transparent @theme_insensitive_border;
}

.spinbutton .button:focus {
    border-color: transparent @theme_highlight_color;
}

.spinbutton .button:first-child,
.spinbutton .button:last-child {
    border-color: transparent;
}

.spinbutton .button:first-child:focus {
    border-color: @theme_highlight_color;
    border-right-color: transparent;
}

.spinbutton .button:last-child:focus {
    border-color: @theme_highlight_color;
    border-left-color: transparent;
}

.spinbutton .button:first-child {
    border-radius: 2px 0 0 2px;
}

.spinbutton .button:last-child {
    border-radius: 0 2px 2px 0;
}

.menuitem {
    color: @theme_fg_color;
}

.menuitem:insensitive {
    color: @theme_button_insensitive_fg;
}

.menubar .menuitem {
    padding: 3px 5px;
}

.menubar .menuitem:hover {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.menu .menuitem {
    padding: 4px;
}

.menu .menuitem:hover {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.menu {
    border-style: solid;
    border-color: @theme_fg_color;
    border-width: 1px;

    color: @theme_fg_color;
}

.menuitem.separator {
    -GtkMenuItem-horizontal-padding: 0;
}

.toolbar {
    padding: 4px;
    border-width: 1px 0;
    border-style: solid;
    border-color: @theme_border_color;

    background-color: @theme_toolbar_bg;
}

.toolbar .button {
    background-color: transparent;
}

.toolbar .button:insensitive {
    background-color: @theme_base_color;
}

.primary-toolbar .button:insensitive {
    background-color: transparent;
    color: @theme_insensitive_color ;
}

.raised .button,
.raised.button {
    background-color: @theme_button_bg;
}

.primary-toolbar .raised .button:insensitive,
.primary-toolbar .raised.button:insensitive {
    border-color: @theme_button_insensitive_border;
    background-color: @theme_button_insensitive_bg;
    color: @theme_button_insensitive_fg;
}

.primary-toolbar .raised .button:active,
.primary-toolbar .raised.button:active,
.primary-toolbar .button:active,
.toolbar .button:active {
    background-color: @theme_slider_bg;
    border-color: @theme_slider_bg;
}

.primary-toolbar .raised .button:hover,
.primary-toolbar .raised.button:hover,
.primary-toolbar .button:hover,
.toolbar .button:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

.primary-toolbar .raised .button:active:insensitive,
.primary-toolbar .raised.button:active:insensitive,
.primary-toolbar .button:active:insensitive,
.toolbar .button:active:insensitive {
    border-color: @theme_button_insensitive_active_bg;
    background-color: @theme_button_insensitive_active_bg;

    color: @theme_base_color;
}

/*******************
 * Inline toolbars *
 *******************/
.inline-toolbar {
    border-width: 0 1px 1px;
    -GtkToolbar-button-relief: normal;
}

.inline-toolbar:last-child {
    border-radius: 0 0 3px 3px;
}

.inline-toolbar .button {
    color: @theme_inline_toolbar_button_fg;
    background-color: @theme_inline_toolbar_button_bg;

    border-radius: 0;
    border-width: 1px 0;
    border-color: @theme_button_linked_border;
    box-shadow: inset -1px 0 @theme_inline_toolbar_button_side;
}
/* ... */

